<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tooltipText="Password must be at least 6 characters long"
    tools:context=".ui.register.RegisterFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/emailET"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="@+id/emailET"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textCapSentences"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/nameET"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/nameET"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <EditText
        android:id="@+id/verifyPasswordET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/passwordET"
        app:layout_constraintStart_toStartOf="@+id/passwordET"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/BurntSienna"
        android:text="@string/sign_up"
        android:textColor="#000000"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyPasswordET" />

</androidx.constraintlayout.widget.ConstraintLayout>